--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
     "react/": "https://esm.sh/react@^19.1.0/",
     "@google/genai": "https://esm.sh/@google/genai@^1.4.0",
     "react-router-dom": "https://esm.sh/react-router-dom@^7.6.2",
-    "recharts": "https://esm.sh/recharts@^2.15.3"
+    "recharts": "https://esm.sh/recharts@^2.15.3",
+    "path": "https://esm.sh/path@^0.12.7",
+    "vite": "https://esm.sh/vite@^7.0.0",
+    "@capacitor/cli": "https://esm.sh/@capacitor/cli@^7.4.0"
   }
 }
 </script>
